spacing issues in tabs and list element

--- a/docs/assets/scss/_yb_bullets-and-number-list.scss
+++ b/docs/assets/scss/_yb_bullets-and-number-list.scss
@@ -4,7 +4,7 @@
     line-height: 24px;
 
     & + p {
-      margin: 24px 0 0 0;
+      margin: 12px 0 0 0;
     }
   }
 }
