--- a/docs/assets/scss/_yb_pills.scss
+++ b/docs/assets/scss/_yb_pills.scss
@@ -2,7 +2,7 @@
 ul.nav.yb-pills {
   display: flex;
   gap: 16px;
-  margin: 16px 0;
+  margin: 24px 0;
 
   li {
     background: #fff;
